@@ -202,33 +202,18 @@ public class TestLeftRecursion extends BaseTest {
 			"grammar T;\n" +
 			"s : e {System.out.println($e.v);} ;\n" +
 			"e returns [int v, List<String> ignored]\n" +
-			"  : e '*' b=e {$v *= $b.v;}\n" +
-			"  | e '+' b=e {$v += $b.v;}\n" +
+			"  : a=e '*' b=e {$v = $a.v * $b.v;}\n" +
+			"  | a=e '+' b=e {$v = $a.v + $b.v;}\n" +
 			"  | INT {$v = $INT.int;}\n" +
+			"  | '(' x=e ')' {$v = $x.v;}\n" +
 			"  ;\n" +
 			"INT : '0'..'9'+ ;\n" +
 			"WS : (' '|'\\n') {skip();} ;\n";
 		String[] tests = {
 			"4",			"4",
-			"1+2",			"3",
-		};
-		runTests(grammar, tests, "s");
-	}
-
-	@Test public void testReturnValueAndActionsAndASTs() throws Exception {
-		String grammar =
-			"grammar T;\n" +
-			"s @after {System.out.println($ctx.toStringTree(this));} : e {System.out.print(\"v=\"+$e.v+\", \");} ;\n" +
-			"e returns [int v, List<String> ignored]\n" +
-			"  : e '*' b=e {$v *= $b.v;}\n" +
-			"  | e '+' b=e {$v += $b.v;}\n" +
-			"  | INT {$v = $INT.int;}\n" +
-			"  ;\n" +
-			"INT : '0'..'9'+ ;\n" +
-			"WS : (' '|'\\n') {skip();} ;\n";
-		String[] tests = {
-			"4",			"v=4, 4",
-			"1+2",			"v=3, (+ 1 2)",
+		"1+2",			"3",
+		"1+2*3",		"7",
+		"(1+2)*3",		"9",
 		};
 		runTests(grammar, tests, "s");
 	}
